--- a/package.json
+++ b/package.json
@@ -22,13 +22,13 @@
     "gatsby": "^5.11.0",
     "gatsby-plugin-postcss": "^6.11.0",
     "gatsby-plugin-sitemap": "^6.11.0",
+    "lottie-react": "^2.4.0",
     "postcss": "^8.4.27",
     "react": "^18.2.0",
     "react-big-calendar": "^1.8.1",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.4",
-    "react-lottie": "^1.2.3",
     "react-photo-album": "^2.2.2",
     "remixicon": "^3.5.0",
     "tailwindcss": "^3.3.3",
