--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "firebase": "^10.1.0",
     "framer-motion": "^10.15.1",
     "gatsby": "^5.11.0",
+    "gatsby-plugin-manifest": "^5.12.0",
+    "gatsby-plugin-offline": "^6.12.0",
     "gatsby-plugin-postcss": "^6.11.0",
     "gatsby-plugin-sitemap": "^6.11.0",
     "lottie-react": "^2.4.0",
