--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "postcss": "^8.4.27",
     "react": "^18.2.0",
     "react-big-calendar": "^1.8.1",
+    "react-cookie": "^6.1.1",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.4",
