--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gatsby-plugin-offline": "^6.12.0",
     "gatsby-plugin-postcss": "^6.11.0",
     "gatsby-plugin-sitemap": "^6.11.0",
+    "gatsby-source-wordpress": "^7.12.3",
     "lottie-react": "^2.4.0",
     "postcss": "^8.4.27",
     "react": "^18.2.0",
